<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_atalaia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCC00"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.vidaorganica.vidaorganica.MainActivityAtalaia">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/titulo_feira_atalaia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:background="@color/colorVerde"
                android:paddingBottom="@dimen/margin"
                android:paddingLeft="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                android:text="@string/titulo_feira_atalaia"
                android:textColor="@color/colorBranco"
                android:textSize="@dimen/titulo"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mapa_feira_atalaia"
                android:layout_width="match_parent"
                android:layout_height="286dp"
                android:layout_marginBottom="10sp"
                android:contentDescription="@string/descricao_mapa_atalaia"
                android:src="@drawable/feira_atalaia"/>

            <TextView
                android:id="@+id/endereco_feira_atalaia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMarron"
                android:paddingBottom="@dimen/margin"
                android:paddingLeft="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:text="@string/endereco_feira_atalaia"
                android:textColor="@color/colorBranco"
                android:textSize="@dimen/endereco"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dia_feira_atalaia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAbobora"
                android:paddingBottom="@dimen/margin"
                android:paddingLeft="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:text="@string/dia_feira_atalaia"
                android:textColor="@color/colorBranco"
                android:textSize="@dimen/dia"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/semana_mosqueiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAbobora"
                android:paddingBottom="@dimen/margin"
                android:paddingLeft="@dimen/margin"
                android:paddingRight="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                android:text="@string/semana_atalaia"
                android:textColor="@color/colorBranco"
                android:textSize="@dimen/dia"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/produtos"
                android:background="@color/colorAbobora"
                android:paddingBottom="@dimen/margin"
                android:paddingLeft="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:text="@string/produtos_atalaia"
                android:textColor="@color/colorBranco"
                android:textSize="@dimen/dia"
                android:textStyle="bold"/>

            <Button
                android:text="@string/sair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSair"
                android:background="#333333"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:textStyle="normal|bold"
                style="@android:style/Widget.Button"
                tools:ignore="SpUsage" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
