<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#CCCC00"
    tools:context="br.com.vidaorganica.vidaorganica.MainActivityPrincipal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo_vida"
                android:id="@+id/logo_vida"
                android:background="@null"
                android:paddingBottom="@dimen/margin"
                android:contentDescription="@string/descricao" />

            <TextView
                android:text="@string/frase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frase"
                android:textAlignment="center"
                android:textSize="18sp"
                android:background="#008000"
                android:textColor="#ffffff"
                android:textStyle="normal|bold"
                android:layout_marginBottom="@dimen/margin"
                android:padding="20dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="111dp"
                app:srcCompat="@drawable/organicos"
                android:id="@+id/organicos"
                android:paddingTop="10dp"
                android:layout_marginBottom="@dimen/margin"
                android:contentDescription="@string/descricao"
                android:cropToPadding="true" />

            <Button
                android:text="@string/entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEntrar"
                android:background="#008000"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="normal|bold"
                style="@android:style/Widget.Button"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
